image type cahnge

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button>Explore Now</button>
             </div>
             <div class="right">
-                <img src="./image.jpg" alt="">
+                <img src="./image.webp" alt="">
             </div>
         </div>
     </div>
